EKS-Ingress-Controller/banana.yaml
apiVersion: v1
kind: Pod
metadata:
  name: banana-app
  labels:
    apps: banana
spec:
  containers:
  - name: banana-app
    image: hashicorp/http-echo
    args:
    - "-text=banana"

---
apiVersion: v1
kind: Service
metadata:
  name: banana-service
spec:
  selector:
    app: banana
  ports:
    - port: 5678
